# epub2speech

./: .env.template  .gitignore  .pylintrc  CONVERTOR_USAGE.md  MANIFEST.in  PUBLISHING.md  README.md  README_zh-CN.md  SECURITY.md  cspell.json  pyproject.toml  test.py  test_azure_tts.py  test_convertor.py
.github/workflows/: ci.yml  merge-build.yml  pr-check.yml  publish.yml
docs/: DEVELOPMENT.md
epub2speech/: __init__.py  chapter_tts.py  cli.py  convertor.py  epub_picker.py  example_usage.py  extractor.py  m4b_generator.py  picker.py  text_normalizer.py
epub2speech/tts/: __init__.py  azure_provider.py  config.py  doubao_provider.py  protocol.py  qwen_provider.py
examples/: epub_to_speech.py
scripts/: build_audio_qc.py  build_cleaning_summary.py  epub2speech.sh  lint.py  lint.sh  setup.sh
tests/: test_build_audio_qc.py  test_build_cleaning_summary.py  test_chapter_tts.py  test_doubao_provider.py  test_epub_picker.py  test_extractor.py  test_extractor_noise.py  test_m4b_concat_command.py  test_m4b_generation.py  test_m4b_generator_filters.py  test_picker.py  test_qwen_provider.py  test_text_normalizer.py  test_tts.py  tts_config.json.template
tests/assets/: Ming dynasty no ncx ref.epub  Ming dynasty.epub  明朝那些事儿.epub
tests/utils/: config.py
