[project]
name = "epub2speech"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ebooklib (>=0.19,<0.20)",
    "azure-cognitiveservices-speech (>=1.46.0,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
